--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
+    "python-shell": "^1.0.7",
     "r-script": "git+https://github.com/Juanperezc/r-script.git"
   }
 }
